# mobile-android-vpn-manager

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-android.yaml  lint-android.yaml  push.yaml
diagrams/: diagram.drawio
gradle/wrapper/: gradle-wrapper.properties
testapp/: build.gradle
testapp/src/main/java/com/kape/myapplication/: MainActivity.kt  UILogger.kt  VPNManagerDependencies.kt
testapp/src/main/res/layout/: activity_main.xml  settings.xml
testapp/src/main/res/values/: colors.xml  strings.xml
vpnmanager/: build.gradle
vpnmanager/src/main/java/com/kape/vpnmanager/data/models/: ClientConfiguration.kt  Configuration.kt  DnsInformation.kt  OpenVpnClientConfiguration.kt  ProtocolCipher.kt  ServerList.kt  ServerPeerInformation.kt  State.kt  TransportProtocol.kt  WireguardClientConfiguration.kt
vpnmanager/src/main/java/com/kape/vpnmanager/domain/controllers/: IStartConnectionController.kt  StartConnectionController.kt
vpnmanager/src/main/java/com/kape/vpnmanager/domain/datasources/: CacheDatasource.kt  ICacheConnectionListenerDatasource.kt  ICacheDatasource.kt  ICacheLoggingDatasource.kt
vpnmanager/src/main/java/com/kape/vpnmanager/domain/usecases/: AddConnectionListener.kt  GetServerList.kt  GetVpnProtocolLogs.kt  GrantPermissions.kt  IAddConnectionListener.kt  IGetServerList.kt  IGetVpnProtocolLogs.kt  IGrantPermissions.kt  IRemoveConnectionListener.kt  ISetClientConfiguration.kt  ISetServer.kt  ISetServerList.kt  IStartConnection.kt  IStartIteratingConnection.kt  IStopConnection.kt  RemoveConnectionListener.kt  SetClientConfiguration.kt  SetServer.kt  SetServerList.kt  StartConnection.kt  StartIteratingConnection.kt  StopConnection.kt
vpnmanager/src/main/java/com/kape/vpnmanager/presenters/: VPNManager.kt  VPNManagerAPI.kt  VPNManagerBuilder.kt
vpnmanager/src/test/java/com/kape/vpnmanager/domain/controllers/: StartConnectionControllerTest.kt
vpnmanager/src/test/java/com/kape/vpnmanager/domain/datasources/: CacheDatasourceTest.kt
vpnmanager/src/test/java/com/kape/vpnmanager/domain/usecases/: AddConnectionListenerTest.kt  GrantPermissionsTest.kt  RemoveConnectionListenerTest.kt  SetClientConfigurationTest.kt  StartConnectionIteratorTest.kt
vpnmanager/src/test/java/com/kape/vpnmanager/testutils/: GivenClientDependency.kt  GivenController.kt  GivenExternal.kt  GivenGateway.kt  GivenModel.kt  GivenUsecase.kt
vpnmanager/src/test/resources/: robolectric.properties
vpnmanager/targetprovider/: build.gradle
vpnmanager/vpnmanagerapi/: build.gradle
vpnmanager/vpnservicemanager/: build.gradle
vpnmanager/vpnservicemanager/src/main/: AndroidManifest.xml
vpnmanager/vpnservicemanager/vpnprotocol/: build.gradle
vpnmanager/vpnservicemanager/vpnprotocol/openvpn/: build.gradle
vpnmanager/vpnservicemanager/vpnprotocol/wireguard/: build.gradle
vpnmanager/vpnservicemanager/vpnprotocol/wireguard/tools/: CMakeLists.txt
vpnmanager/vpnservicemanager/vpnprotocol/wireguard/tools/dummy/: dummy.c
vpnmanager/vpnservicemanager/vpnprotocol/wireguard/tools/libwg-go/: goruntime-boottime-over-monotonic.diff  jni.c
(+361 files in other folders)
